--- a/SampleToFlameGraph/SampleToFlameGraph.csproj
+++ b/SampleToFlameGraph/SampleToFlameGraph.csproj
@@ -3,11 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73F97455-1FDB-4C3F-9452-B42C9232883B}</ProjectGuid>
-    <ProjectTypeGuids>{86F6BF2A-E449-4B3E-813B-9ACC37E5545F};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
-    <RootNamespace>PokeTheBeachball</RootNamespace>
-    <AssemblyName>PokeTheBeachball</AssemblyName>
+    <ProjectGuid>{77848EC7-3BDB-42D6-944D-36080C2CC7CC}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>SampleToFlameGraph</RootNamespace>
+    <AssemblyName>SampleToFlameGraph</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -18,34 +17,32 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <ExternalConsole>false</ExternalConsole>
+    <Commandlineparameters>"/Users/davidkarlas/Desktop/Xamarin Studio_Profiling_2016-07-05T20:10:06.txt"</Commandlineparameters>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <ExternalConsole>true</ExternalConsole>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\AddinInfo.cs" />
-    <Compile Include="Commands.cs" />
-    <Compile Include="BeachballPoker.cs" />
-    <Compile Include="GlobalOptionsDialog.cs" />
+    <Reference Include="System" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\Manifest.addin.xml" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <AddinFile Include="..\PokeTheBeachballDaemon\bin\Debug\PokeTheBeachballDaemon.exe">
-      <Link>PokeTheBeachballDaemon.exe</Link>
-    </AddinFile>
-    <AddinFile Include="..\PokeTheBeachballDaemon\bin\Debug\PokeTheBeachballDaemon.exe.mdb">
-      <Link>PokeTheBeachballDaemon.exe.mdb</Link>
-    </AddinFile>
+    <EmbeddedResource Include="FlameGraphTemplate.html" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\MonoDevelop.Addins.0.3.3\build\net40\MonoDevelop.Addins.targets" Condition="Exists('..\packages\MonoDevelop.Addins.0.3.3\build\net40\MonoDevelop.Addins.targets')" />
 </Project>
